--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,69 +1,95 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+* {
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+ul {
+  padding: 0;
   margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.App {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  position: relative;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.SearchInput {
+  width: 450px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.SearchInput__input {
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 24px;
+  padding: 10px 24px;
+  font-size: 20px;
+}
+
+.Suggestion {
+  position: absolute;
+  font-size: 20px;
+  width: 300px;
+  top: 50%;
+  z-index: 1;
+  padding: 10px;
+  border-radius: 24px;
+  border: 1px solid black;
+}
+
+.Suggestion ul {
+  width: 100%;
+}
+
+.Suggestion li {
+  padding: 10px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  width: 100%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.Suggestion li:hover {
+  background-color: #90cdf4;
+}
+
+.Suggestion__item--selected {
+  background-color: #bee3f8;
+}
+
+.Suggestion__item--matched {
+  background-color: #9ae6b4;
+}
+
+.SelectedLanguage {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  flex-wrap: nowrap;
+  width: 800px;
+  height: 37.5px;
+  margin-top: -100px;
+  margin-bottom: 10px;
+}
+
+.SelectedLanguage li {
+  display: inline-block;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
